--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -13,6 +13,101 @@ a {
   text-decoration: none;
 }
 
+div.banner-wrapper {
+  position: absolute;
+  left: 0; top: 0;
+  width: 100%; height: 100vh;
+  background-color: rgba(210, 210, 210, 0.4);
+  overflow: hidden;
+  z-index: 3;
+  /* display: flex; */
+  display: none;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+div.banner-container {
+  color: white;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px;
+  width: 40%;
+  height: 50%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 35px 13px rgba(136,211,206,0.6);
+  background-image: -moz-linear-gradient( 150deg, rgba(136,211,206, 0.8) 0%, rgba(110,69,226, 0.8) 100%);
+  background-image: -webkit-linear-gradient( 150deg, rgba(136,211,206, 0.8) 0%, rgba(110,69,226, 0.8) 100%);
+  background-image: -ms-linear-gradient( 150deg, rgba(136,211,206, 0.8) 0%, rgba(110,69,226, 0.8) 100%);
+}
+
+p.banner-description {
+  text-align: center;
+  margin: 20px 0;
+  font-size: 1.4rem;
+}
+
+form.form-banner {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: center;
+  height: 80%;
+  width: 100%;
+}
+
+form.form-banner input.banner-input {
+  width: 60%;
+  height: 40px;
+  text-indent: 10px;
+  font-size: 1.4rem;
+  padding: 10px 5px;
+  outline: none;
+  border-radius: 5px;
+  border: 0;
+  transition: all .4s;
+}
+
+input.banner-input:focus {
+  background-color: rgba(112, 255, 84, 0.6);
+  transition: all .4s;
+}
+
+form.form-banner input.tel {
+  width: 45%;
+}
+
+div.agreement {
+  margin: 15px 0;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+div.agreement input {
+  transform: scale(1.5);
+  outline: none;
+  border: 0;
+}
+
+div.agreement p {
+  margin-left: 10px;
+  text-align: center;
+}
+
+form.form-banner input.banner-btn {
+  width: 25%;
+  padding: 12px 0;
+  outline: none;
+  border-radius: 5px;
+  border: 0;
+  transition: all .4s;
+  margin-top: 10px;
+}
+
 div.headerWrapper {
   background-image: url("../img/4hh8mjbqyye-ewan-robertson.jpg");
   -webkit-background-size: cover;
@@ -71,26 +166,31 @@ div.logo > h3 {
   display: inline-block;
   font-size: 1.6rem;
   font-weight: bold;
-  margin-left: 1vw;
+  margin-left: 10px;
 }
 
 ul.headerNavigation {
-  width: 55%;
   list-style-type: none;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-a.headerNavigation-btn {
-  display: inline-block;
-  padding: 0vh 1vw;
-  color: white;
-  font-size: 0.9rem;
-transition: all .5s;
+ul.headerNavigation li {
+  margin: 20px;
 }
 
-a.headerNavigation-btn:after {
+a.headerNavigation-btn {
+  display: inline-block;
+  padding: 0 10px;
+  color: white;
+  font-size: 0.9rem;
+  transition: all .5s;
+}
+
+/* Выезжающее подчеркивание в разные стороны с codepen */
+
+/* a.headerNavigation-btn:after {
   content: "";
   display: block;
   position: relative;
@@ -100,13 +200,15 @@ a.headerNavigation-btn:after {
   border-bottom: 1px solid #fff;
   bottom: .15em;
   transition: all .5s;
+  padding-bottom: 1vh;
 }
 
 a.headerNavigation-btn:hover:after {
-  padding-bottom: 1vh;
   width: 100%;
   border-bottom: 1px solid #fff;
-}
+}  */
+
+/* Выезжающее сыерху сплошное подчеркивание */
 
 /* a.headerNavigation-btn {
   padding: 0vh 1vw;
@@ -122,12 +224,43 @@ a.headerNavigation-btn:hover {
   padding-bottom: 0.5vh;
 } */
 
-a.get-started-btn {
+
+/* Выезжающее подчеркивание в разные стороны от Сани */
+
+a.headerNavigation-btn {
+  position: relative;
+  top: 0; left: 0;
+  transition: all .5s;
   color: white;
-  margin-left: 5vw;
+  padding-bottom: 10px;
+}
+
+a.headerNavigation-btn:after {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  content: "";
+  transform: scale(0);
+  transition: all .4s;
+}
+
+a.headerNavigation-btn:hover:after {
+  transform: scale(1);
+  width: 100%;
+  transition: all .4s;
+}
+
+a.get-started-btn {
+  display: block;
+  text-align: center;
+  color: white;
+  margin-left: 60px;
   border: 1px solid #FFFFFF;
   border-radius: 20px;
-  padding: 1vh 1vw;
+  padding: 10px 20px;
   font-weight: bold;
   transition: all .3s; 
   font-size: 0.9rem;
@@ -147,7 +280,7 @@ div.main-text {
 
 span.description {
   font-size: 0.9rem;
-  margin-bottom: 2vh;
+  margin-bottom: 20px;
 }
 
 div.main-text span.description::after, div.main-text span.description::before {
@@ -156,19 +289,18 @@ div.main-text span.description::after, div.main-text span.description::before {
 
 span.description::after, span.description::before {
   content: "";
-  width: 1.7vw;
-  height: 1px;
+  width: 33px;
+  height: 2px;
   vertical-align: middle;
-  
   display: inline-block;
 }
 
 span.description::before {
-  margin-right: 1vw;
+  margin-right: 15px;
 }
 
 span.description::after {
-  margin-left: 1vw;
+  margin-left: 15px;
 }
 
 div.main-text h1, div.select-a-plan h1 {
@@ -177,18 +309,18 @@ div.main-text h1, div.select-a-plan h1 {
   -moz-transform: matrix( 1.42422241571191,0,0,1.42422241571191,0,0);
   -webkit-transform: matrix( 1.42422241571191,0,0,1.42422241571191,0,0);
   -ms-transform: matrix( 1.42422241571191,0,0,1.42422241571191,0,0);
-  margin-bottom: 3vh;
+  margin-bottom: 30px;
   font-weight: normal;
 }
 
 div.main-text p, div.select-a-plan p {
-  max-width: 20vw;
+  max-width: 420px;
   text-align: center;
-  line-height: 1.5vw;
+  line-height: 30px;
 }
 
 a.down-arrow {
-  margin-bottom: 1vh;
+  margin-bottom: 12px;
   z-index: 2;
 }
 
@@ -203,7 +335,7 @@ a.down-arrow img {
 }
 
 main, div.map, div.map-overlay {
-  padding: 10vh 10vw;
+  padding: 70px 50px;
 }
 
 main {
@@ -223,15 +355,15 @@ div.select-a-plan {
 
 div.select-a-plan span.description::after, div.select-a-plan span.description::before {
   background-color: #6e45e2;
-  width: 1vw;
+  width: 25px;
 }
 
 div.select-a-plan span.description::before {
-  margin-right: 0.6vw;
+  margin-right: 15px;
 }
 
 div.select-a-plan span.description::after {
-  margin-left: 0.6vw;
+  margin-left: 15px;
 }
 
 div.select-a-plan h1 {
@@ -239,7 +371,7 @@ div.select-a-plan h1 {
 }
 
 div.select-a-plan p {
-  max-width: 26vw;
+  max-width: 450px;
 }
 
 div.columns {
@@ -248,7 +380,7 @@ div.columns {
   flex-flow: row wrap;
   justify-content: space-around;
   align-items: flex-start;
-  margin-top: 7vh;
+  margin-top: 50px;
 }
 
 div.column {
@@ -273,11 +405,10 @@ div.column:hover {
 }
 
 div.column p.plan-type {
-  margin: 2vh 0vw;
+  margin: 10px 0;
   font-size: 14px;
   color: rgb(159, 164, 175);
   font-weight: bold;
-  text-transform: uppercase;
   text-align: center;
 }
 
@@ -300,24 +431,24 @@ div.column span.sum {
 }
 
 div.column p.plan-description {
-  font-size: 0.7rem;
+  font-size: 0.9rem;
   color: rgb(159, 164, 175);
-  line-height: 1.75;
+  line-height: 22px;
   text-align: center;
-  margin: 2vh 0vw;
-  padding: 0vh 2vw;
+  margin: 10px 0;
+  padding: 0vh 10px;
 }
 
 a.select-plan {
   display: block;
-  margin-top: 2vh;
+  margin-top: 10px;
   font-size: 0.8rem;
   color: rgb(194, 201, 219);
   font-weight: bold;
   border: 1px solid rgb(215, 219, 232);
   box-shadow: 0px 0px 18.69px 2.31px rgba(204, 204, 223, 0.5);
   border-radius: 30px;
-  padding: 2vh 4vw;
+  padding: 10px 30px;
   transition: all .4s;
 }
 
@@ -329,7 +460,7 @@ a.select-plan:hover {
 
 div.pre-footer {
   width: 100%;
-  padding: 0 5vw;
+  padding: 0 40px;
   background-image: -moz-linear-gradient( 150deg, rgb(136,211,206) 0%, rgb(110,69,226) 100%);
   background-image: -webkit-linear-gradient( 150deg, rgb(136,211,206) 0%, rgb(110,69,226) 100%);
   background-image: -ms-linear-gradient( 150deg, rgb(136,211,206) 0%, rgb(110,69,226) 100%);
@@ -349,7 +480,7 @@ div.map-container {
   position: relative;
   left: 0px; top: 0px;
   z-index: 2;
-  padding: 12vh 0vw;
+  padding: 120px 0;
 }
 
 div.map-container span.description, div.map-container h1 {
@@ -357,23 +488,22 @@ div.map-container span.description, div.map-container h1 {
 }
 
 div.map-container span.description {
-  margin-bottom: 1vh;
+  margin-bottom: 10px;
 }
 
 div.pre-footer-btns {
-  width: 40%;
+  width: 100%;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-   margin-top: 2vh;
+  margin-top: 20px;
 }
 
 div.pre-footer-btns a {
   margin-top: 0;
-  padding: 2vh 0;
-  max-width: 300px;
-  width: 12vw;
+  padding: 20px 0;
+  width: 220px;
   text-align: center;
   color: rgb(194, 201, 219);
   font-weight: bold;
@@ -384,7 +514,7 @@ div.pre-footer-btns a {
 }
 
 div.pre-footer-btns a:last-child {
-  margin-left: 1.5vw;
+  margin-left: 35px;
 }
 
 footer {
@@ -400,16 +530,19 @@ div.logo-and-navigation {
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 2vh 2vw;
+  padding: 30px;
   border-bottom: 1px solid rgba(128, 128, 128, 0.4);
 }
 
-footer ul.footerNavigation {
-  width: 55%;
+ul.footerNavigation {
   list-style-type: none;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+ul.footerNavigation li {
+  margin: 0 20px;
 }
 
 ul.footerNavigation li a.footer-navigation-button {
@@ -427,7 +560,7 @@ ul.footerNavigation li a.get-started-btn:hover {
 }
 
 div.copyright-and-social {
-   padding: 1vh 2vw;
+   padding: 10px 30px;
    width: 100%;
    display: flex;
    flex-flow: row wrap;
