--- a/styles/map.css
+++ b/styles/map.css
@@ -5,7 +5,7 @@ section.map
     align-items: center;
     justify-content: center;
 
-    background-image: url('../img/map.png');
+    background-image: url('../img/Map.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
